--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "clean": "rm -rf dist && mkdir dist",
     "build:templates:pug": "node tasks/build/templates.js",
     "build:templates": "npm run build:templates:pug",
-    "build": "npm run clean && npm run build:templates",
+    "build:styles:stylus": "mkdir -p dist/styles && stylus -c src/styles/main.styl -o dist/styles/main.css",
+    "build:styles": "npm run build:styles:stylus",
+    "build": "npm run clean && npm run build:templates && npm run build:styles",
     "serve": "browser-sync start -s dist -f dist"
   }
 }
