feat (config): add linkedin field

--- a/src/config.json
+++ b/src/config.json
@@ -17,7 +17,8 @@
       "github": "falcaoaugustos",
       "facebook": "falcaoaugustos",
       "twitter": "falcaoaugustos",
-      "instagram":"falcaoaugustos"
+      "instagram": "falcaoaugustos",
+      "linkedin": "augusto-falcão-2bab51138"
     }
   },
   "technologies": [
