--- a/src/config.json
+++ b/src/config.json
@@ -5,7 +5,7 @@
   },
   "about": {
     "title": "falcaoaugustos",
-    "description": "I'm a BSC Engineering Computer student at IFCE, always on the lookout for new challenges. I'm currently working as an iOS • watchOS • tvOS developer at Apple Developer Academy (former) BEPiD). I like going to in meetups and whenever possible I help to organize some local meetings.",
+    "description": "I'm a BSC Computer Engineering student at IFCE, always on the lookout for new challenges. I'm currently working as an iOS • watchOS • tvOS developer at Apple Developer Academy (former BEPiD). I like going to in meetups and whenever possible I help to organize some local meetings.",
     "author": "falcaoaugustos",
     "email": "falcaoaugustos@gmail.com",
     "canonical": "http://falcaoaugustos.github.io",
