--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "clean": "rm -rf dist && mkdir dist",
     "build:templates:pug": "node tasks/build/templates.js",
     "build:templates": "npm run build:templates:pug",
-    "build:scripts": "mkdir -p dist/scripts && cp src/scripts/main.js dist/scripts/",
     "build:styles:stylus": "mkdir -p dist/styles && stylus -c src/styles/main.styl -o dist/styles/main.css",
     "build:styles": "npm run build:styles:stylus",
     "build:images:imagemin": "imagemin src/images/**/* -o dist/images",
     "build:images": "npm run build:images:imagemin",
-    "build": "npm run clean && npm run build:templates && npm run build:scripts && npm run build:styles && npm run build:images",
+    "build": "npm run clean && npm run build:templates && npm run build:styles && npm run build:images",
     "serve": "browser-sync start -s dist -f dist",
     "deploy": "node tasks/deploy/gh-pages.js"
   },
