--- a/src/config.json
+++ b/src/config.json
@@ -1,17 +1,17 @@
 {
   "welcome": {
-    "title": "> HEY, THERE!",
+    "title": "> HEY THERE!",
     "description": "I'm a just knowledge explorer, open-source contributor. Here I describe some of my passions: share knowledge, design and implementation of projects, programming contests, new technologies, table tennis, basketball, games, music."
   },
   "about": {
     "title": "falcaoaugustos",
-    "description": "I'm a BSC Computer Engineering student at IFCE, always on the lookout for new challenges. I'm currently working as an iOS • watchOS • tvOS developer at Apple Developer Academy (former BEPiD). I like going to in meetups and whenever possible I help to organize some local meetings.",
+    "description": "I'm a Computer Engineering student at IFCE, always on the lookout for new challenges. I'm currently working as an iOS • watchOS • tvOS developer at Apple Developer Academy (former BEPiD). I like going to meetups and whenever is possible I help to organize some local meetings.",
     "author": "falcaoaugustos",
     "email": "falcaoaugustos@gmail.com",
     "canonical": "http://falcaoaugustos.github.io",
     "image": "images/banner.png",
     "mobile": {
-      "themeColor": "#543662"
+      "themeColor": "#222222"
     },
     "socialNetworks": {
       "github": "falcaoaugustos",
