fix (config): fix typos

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "welcome": {
     "title": "> HEY THERE!",
-    "description": "I'm a just knowledge explorer, open-source contributor. Here I describe some of my passions: share knowledge, design and implementation of projects, programming contests, new technologies, table tennis, basketball, games, music."
+    "description": "I'm just a knowledge explorer, open-source contributor. Here I describe some of my passions: sharing knowledge, design and implementation of projects, programming contests, new technologies, table tennis, basketball, games, music."
   },
   "about": {
     "title": "falcaoaugustos",
