feat (config): update objective-c technology description

--- a/src/config.json
+++ b/src/config.json
@@ -28,7 +28,7 @@
     },
     {
       "title": "ObjectiveC",
-      "description": "I have learnt how to develop and how to maintain iOS applications legacy code too for the Apple ecosystem."
+      "description": "When it comes to Objective-C, I feel comfortable with maintaining large legacy code bases and with designing a whole solution from scratch as well."
     },
     {
       "title": "Node",
