--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,11 @@
 {
   "welcome": {
     "title": "> HEY THERE!",
-    "description": "I'm just a knowledge explorer, open-source contributor. Here I describe some of my passions: sharing knowledge, design and implementation of projects, programming contests, new technologies, table tennis, basketball, games, music."
+    "description": "I'm just a knowledge explorer, open-source contributor. Here I describe some of my passions: sharing knowledge, design and implementation of projects, programming contests, new technologies, table tennis, basketball, games, music, dance."
   },
   "about": {
     "title": "falcaoaugustos",
-    "description": "I'm a Computer Engineering student at IFCE, always on the lookout for new challenges. In my last job I was working as an iOS • watchOS • tvOS developer at Apple Developer Academy (former BEPiD). I like going to meetups and whenever is possible I help to organize some local meetings.",
+    "description": "I'm a Computer Science student at UFC, always on the lookout for new challenges. In my last job I was working as an iOS • watchOS • tvOS developer at Apple Developer Academy (former BEPiD). I like going to meetups and whenever is possible I help to organize some local meetings.",
     "author": "falcaoaugustos",
     "email": "falcaoaugustos@gmail.com",
     "canonical": "http://falcaoaugustos.github.io",
